<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/btn_horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_horizontal_line" />

    <Button
        android:id="@+id/btn_vertical_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_vertical_line" />

    <Button
        android:id="@+id/btn_grid_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_grid_line" />

    <Button
        android:id="@+id/btn_grid_head_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_grid_head_line" />

    <Button
        android:id="@+id/btn_grid_foot_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_grid_foot1_line" />

    <Button
        android:id="@+id/btn_grid_head_foot_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_grid_head_foot_line" />

    <Button
        android:id="@+id/btn_grid_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="普通格子列表分隔线" />

    <Button
        android:id="@+id/btn_grid_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="格子列表3列" />

</LinearLayout>